# app/Http/Controllers/Api/AuthController.php
@@ -10,7 +10,7 @@ use App\Http\Resources\UserResource;
 /**
  * Class AuthController
  * @package App\Http\Controllers\Api
- * @OA\Tag(name="Auth")
+ * @OA\Tag(name="auth")
  */
 class AuthController extends BaseController
 {
@@ -29,13 +29,22 @@ class AuthController extends BaseController
      * @return \Illuminate\Http\JsonResponse
      * @OA\Post(
      *     path="/api/auth/login",
-     *     tags={"Auth"},
-     *     operationId="authLogin",
-     *     @OA\RequestBody(ref="App/ApiDoc/Auth/LoginRequest"),
+     *     tags={"auth"},
+     *     operationId="login",
+     *     @OA\RequestBody(
+     *         request="LoginRequest",
+     *         description="Auth request fields",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             required={"email", "password"},
+     *             @OA\Property(property="email", type="string", example="admin@mail.com"),
+     *             @OA\Property(property="password", type="string", example="qwerty"),
+     *         )
+     *     ),
      *     @OA\Response(
      *          response=200,
      *          description="Success auth response",
-     *          @OA\JsonContent(ref="#/components/schemas/LoginSuccessResponse")
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessResponse")
      *      ),
      *     @OA\Response(
      *          response=401,
@@ -66,9 +75,20 @@ class AuthController extends BaseController
      * @return \Illuminate\Http\JsonResponse
      * @OA\Post(
      *     path="/api/auth/register",
-     *     tags={"Auth"},
-     *     operationId="authRegister",
-     *     @OA\RequestBody(ref="App/ApiDoc/Auth/RegisterRequest"),
+     *     tags={"auth"},
+     *     operationId="register",
+     *     @OA\RequestBody(
+     *         request="RegistrationRequest",
+     *         description="Registration request body",
+     *         @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="name", type="string", example="John Doe"),
+     *              @OA\Property(property="email", type="string", example="admin@mail.com"),
+     *              @OA\Property(property="phone", type="string", example="8-777-486-89-89"),
+     *              @OA\Property(property="password", type="string", example="qwerty"),
+     *              @OA\Property(property="password_confirmation", type="string", example="qwerty"),
+     *         )
+     *     ),
      *     @OA\Response(
      *          response=200,
      *          description="User successfully registered",
